--- a/sass/components/main/_activity.scss
+++ b/sass/components/main/_activity.scss
@@ -1,5 +1,11 @@
 .activity {
   padding-top: 0;
+
+  display: none;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
 }
 
 .activity__title {
