--- a/sass/components/modal-window/_modal-window.scss
+++ b/sass/components/modal-window/_modal-window.scss
@@ -1,7 +1,7 @@
 .modal {
   padding: 40px;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
 
   position: absolute;
   top: 50%;
@@ -13,6 +13,11 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .modal__btn {
