--- a/sass/components/footer/_address.scss
+++ b/sass/components/footer/_address.scss
@@ -1,9 +1,18 @@
 .footer__contacts {
-  margin-right: 70px;
+  // margin-right: 70px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-left: 76px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+  }
 }
 
 .footer__addres {
-  margin-top: 10px;
+  // margin-top: 10px;
+  margin-top: 20px;
 }
 
 .footer-addres__location {
