--- a/sass/components/footer/_footer-subscribe-form.scss
+++ b/sass/components/footer/_footer-subscribe-form.scss
@@ -1,21 +1,47 @@
 .footer__subscribe-form {
-  display: flex;
-  align-items: flex-end;
-  gap: 12px;
-  min-width: 570px;
-  height: 86px;
-  margin-left: 96px;
-  margin-top: 12px;
+  // display: flex;
+  // align-items: flex-end;
+  // gap: 12px;
+  // min-width: 570px;
+  // height: 86px;
+  // margin-left: 96px;
+  // margin-top: 12px;
+  margin-top: 60px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: flex-end;
+    gap: 12px;
+    min-width: 570px;
+    height: 86px;
+    margin-left: 96px;
+    margin-top: 12px;
+  }
 }
 
 .subscribe-form__fild {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 358px;
+  // width: 358px;
+
+  margin-bottom: 20px;
+
+  @media screen and (min-width: 768px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    margin-bottom: 0;
+  }
 }
 
 .subscribe-form__label {
+  // mob
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -26,8 +52,9 @@
 .subscribe-form__input {
   height: 50px;
   padding: 15px 16px;
-  display: flex;
-  align-items: center;
+  // display: flex;
+  // align-items: center;
+  // mob
 
   outline: none;
   font-size: 16px;
@@ -39,23 +66,25 @@
 
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-}
 
-.subscribe-form__button {
-  position: relative;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .subscribe-form-button__btn {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: left;
-  min-width: 200px;
-  height: 50px;
   padding: 16px 28px;
+  gap: 10px;
+  width: 200px;
+  height: 50px;
 
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.88;
+  line-height: 1.87;
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
   background-color: var(--accent-color);
@@ -65,9 +94,15 @@
 }
 
 .subscribe-form-button__icon {
-  position: absolute;
-  top: 50%;
-  right: 28px;
+  // position: absolute;
+  // top: 50%;
+  // right: 144px;
+  // top: 0;
+  // right: 0;
 
-  transform: translateY(-50%);
+  // transform: translateY(-50%);
+
+  // @media screen and (min-width: 1200px) {
+  //   right: 28px;
+  // }
 }
