--- a/sass/components/main/_team.scss
+++ b/sass/components/main/_team.scss
@@ -3,19 +3,29 @@
 }
 
 .team__title {
-  margin-bottom: 50px;
+  // margin-bottom: 50px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .team-list {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   gap: 30px;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 
 .team-list__item {
   display: flex;
   flex-direction: column;
-  min-width: 270px;
+  max-width: 450px;
   padding-bottom: 30px;
   align-items: center;
 
@@ -24,10 +34,27 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
 
 .team-list__img {
   margin-bottom: 30px;
+  max-width: 450px;
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
 
 .team-list__name {
