--- a/sass/components/portfolio/_buttons-filter.scss
+++ b/sass/components/portfolio/_buttons-filter.scss
@@ -1,14 +1,28 @@
 .filter-list {
-  margin-bottom: 50px;
+  // margin-bottom: 50px;
   display: flex;
-  justify-content: center;
+  // justify-content: center;
   min-width: 73px;
   flex-wrap: wrap;
-  gap: 8px;
+  // gap: 8px;
+  // mob
+  justify-content: left;
+  row-gap: 16px;
+  column-gap: 8px;
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .filter-list__button {
-  position: relative;
+  // position: relative;
   padding: 6px 22px;
 
   background-color: var(--bg-color-white-grey);
@@ -25,19 +39,18 @@
   transition: background-color var(--transition-fast), color var(--transition-fast),
     box-shadow var(--transition-fast);
 
-    &--current {
-      background-color: var(--accent-color);
-      color: var(--primary-white-color);
-      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-    }
+  &--current {
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 
-    &:hover,
-    &:focus {
-      background-color: var(--accent-color);
-      color: var(--primary-white-color);
-      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-    }
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
-
