--- a/sass/components/portfolio/_work-examples.scss
+++ b/sass/components/portfolio/_work-examples.scss
@@ -1,8 +1,31 @@
 .examples-list {
   display: flex;
-  flex-basis: 370px;
+  // flex-basis: 370px;
   flex-wrap: wrap;
   gap: 30px;
+  // mob
+  flex-basis: 450px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: 370px;
+  }
+}
+
+.examples-list__item {
+  display: block;
+  width: 100%;
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+  }
 }
 
 .examples-list__item:hover {
@@ -18,6 +41,12 @@
   position: relative;
 
   overflow: hidden;
+  // mob
+}
+.examples-list__img {
+  // mob
+  width: 100%;
+  height: 294px;
 }
 
 .examples-list__overlay {
@@ -28,7 +57,9 @@
 
   width: 100%;
   height: 100%;
-  padding: 63px 24px;
+  // padding: 63px 24px;
+  // mob
+  padding: 77px 24px;
 
   font-style: normal;
   font-size: 18px;
@@ -42,8 +73,15 @@
   .examples-list__item:hover & {
     transform: translateY(0);
   }
-}
 
+  @media screen and (min-width: 768px) {
+    padding: 49px 24px 77px 24px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
+  }
+}
 
 .examples-list__text {
   padding: 20px 24px;
@@ -57,6 +95,9 @@
 }
 
 .examples-list__title {
+  // mob
+  margin-bottom: 4px;
+
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
