--- a/sass/components/portfolio/_work-examples.scss
+++ b/sass/components/portfolio/_work-examples.scss
@@ -17,6 +17,7 @@
 
 .examples-list__item {
   display: block;
+  // display: flex;
   width: 100%;
 
   @media screen and (min-width: 768px) {
@@ -34,6 +35,9 @@
 }
 
 .examples-list__card {
+  display: flex;
+  flex-direction: column;
+
   text-decoration: none;
 }
 
@@ -42,11 +46,6 @@
 
   overflow: hidden;
 }
-// .examples-list__img {
-//   // mob
-//   width: 100%;
-//   height: 294px;
-// }
 
 .examples-list__overlay {
   position: absolute;
@@ -87,6 +86,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  flex-grow: 1;
 
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
